Fix z-index

--- a/src/client/components/common/card/card.scss
+++ b/src/client/components/common/card/card.scss
@@ -228,7 +228,7 @@ img {
   align-content: center;
   align-items: center;
   flex-wrap: wrap;
-  z-index: 11;
+  z-index: 12;
 }
 
 .ignore-mouse-events {
@@ -248,5 +248,5 @@ img {
   height: 100%;
   width: 100%;
   border-radius: 12px;
-  z-index: 43;;
+  z-index: 10;
 }
