--- a/src/client/components/dashboard/sidebar/sidebar.css
+++ b/src/client/components/dashboard/sidebar/sidebar.css
@@ -8,7 +8,7 @@
   top: 40px;
   bottom: 0;
   background-color: rgba(34,34,34,.8);
-  z-index: 999;
+  z-index: 100;
   overflow-y: auto;
   color: #c1c2c3;
   border-right: 1px solid #F5B041;
@@ -22,7 +22,7 @@
   top: 40px;
   bottom: 0;
   background-color: rgba(34,34,34,.8);
-  z-index: 999;
+  z-index: 100;
   overflow-y: auto;
   color: #c1c2c3;
   border-left: 1px solid #F5B041;
