--- a/src/client/components/editor/editor.css
+++ b/src/client/components/editor/editor.css
@@ -43,7 +43,7 @@ h5 {
   overflow: hidden;
 
   background-color: rgba(34,34,34,.8);
-  z-index: 999;
+  z-index: 100;
   overflow-y: auto;
   color: #c1c2c3;
   border-left: 1px solid #F5B041;
