--- a/src/client/components/play/game/essence.scss
+++ b/src/client/components/play/game/essence.scss
@@ -3,7 +3,7 @@
   position: relative;
   top: 1px;
   left: 0;
-  z-index: 20;
+  z-index: 32;
   background-size: 196px;
   line-height:0; 
   font-size:0;
